# 04-build

./: zadani.txt
04-cmake/: zadani.txt
04-cmake/mydb/: CMakeLists.txt  build.sh
04-cmake/mydb/src/: CMakeLists.txt
04-maven/: zadani.txt
04-maven/ftp/: build.sh  pom.xml  run.sh
